src/snapshots/rlox__test_errors__missing_op.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print 1 1;\")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1 1;
   │ ──┬──   ┬  
   │   ╰──────── This should be terminated with ;
   │         │  
   │         ╰── There should be a ; here
───╯


