src/snapshots/rlox__test_errors__missing_rhs.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print 1 + ;\\n\")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:1:13]
   │
 1 │ print 1 + ;
   │           ┬  
   │           ╰── Expected primary
───╯


